[tool.poetry]
name = "wuncolors"
version = "0.1.0"
description = "Color Palettes"
authors = ["Philippe Lacroix-Ouellette <philippe.lacroix-ouellette@hec.ca>"]
license = "LICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


